--- a/src/app/Components/Header/Header.module.css
+++ b/src/app/Components/Header/Header.module.css
@@ -1,22 +1,24 @@
 .header {
-	padding: 40px 0;
-	min-height: 695px;
-
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
-	background-color: var(--header-bg);
-	background-image: url('./../../img/header-bg.png');
-	background-repeat: no-repeat;
-	background-size: auto;
-	background-position: center center;
-
 	color: var(--header-text);
 	text-align: center;
+	height: 40vh;  
+}
+
+.header__bg {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 0;
 }
 
 .header__wrapper {
+	position: relative;
+	z-index: 2;
 	padding: 0 15px;
 	max-width: 660px;
 }
@@ -44,6 +46,30 @@
 	line-height: 1.333;
 }
 
-.header__text p + p {
+.header__text p+p {
 	margin-top: 0.5em;
+}
+
+.btn {
+	display: inline-block;
+	height: 48px;
+	padding: 15px 28px;
+
+	border-radius: 5px;
+	background-color: var(--accent);
+	color: var(--white);
+	letter-spacing: 0.15px;
+	font-size: 16px;
+	font-weight: 500;
+
+	transition: opacity 0.2s ease-in;
+}
+
+.btn:hover {
+	opacity: 0.8;
+}
+
+.btn:active {
+	position: relative;
+	top: 1px;
 }
