--- a/src/app/Components/Navbar/NavBar.module.css
+++ b/src/app/Components/Navbar/NavBar.module.css
@@ -1,6 +1,8 @@
 @import '../../globals.css';
 
 .nav {
+	position: sticky;
+	z-index: 10;
 	padding: 20px 0;
 	background-color: var(--nav-bg);
 	border-bottom: 1px solid var(--nav-border);
