--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,7 @@
 	--project-card-bg: var(--white);
 	--project-card-text: var(--black);
 	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+
 }
 
 .dark {
@@ -40,11 +41,25 @@
 	--project-card-bg: var(--black);
 	--project-card-text: var(--white);
 	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.8);
+
+
+	--header-bg-color: var(--black);
+	--particle-color: #ffffff;
+	--link-color: #ffffff;
 }
+
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+	
+  }
+
+  body{
+	--header-bg-color: var(--black);
+	--particle-color: #ffffff;
+	--link-color: #ffffff;
   }
 }
 
@@ -58,6 +73,10 @@ body {
 	/* Light mode */
 	background-color: var(--page-bg);
 	color: var(--text-color);
+
+	--header-bg-color: #ffffff;
+	--particle-color: var(--black);
+	--link-color: var(--black);
 }
 
 #root {
@@ -80,3 +99,7 @@ a {
     color-scheme: dark;
   }
 }
+h1,h2, h3, h4, h5, h6,p {
+	user-select: none;
+}
+
