--- a/src/app/Components/HeaderBg/Particles.module.css
+++ b/src/app/Components/HeaderBg/Particles.module.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   background-color: var(--bg-color);
   z-index: 0;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
   
 .particles {
