--- a/src/app/Components/Projects/Projects.module.css
+++ b/src/app/Components/Projects/Projects.module.css
@@ -24,7 +24,7 @@
 }
 
 .item_container{
-    background-color: var(--black);
+    background-color: var(--cards-bg);
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -38,7 +38,7 @@
 
 .item_container_not{
     cursor: default;
-    background-color: var(--black);
+    background-color: var(--cards-text);
     border-radius: 10px;
     margin: auto;
     display: flex;
@@ -59,5 +59,6 @@
 }
 
 .item_container:hover{
+    scale: 1.05;
     box-shadow: 0px 5px 35px rgba(255, 255, 255, 0.25);   
 }
