--- a/src/app/Components/Projects/Projects.module.css
+++ b/src/app/Components/Projects/Projects.module.css
@@ -60,5 +60,5 @@
 
 .item_container:hover{
     scale: 1.05;
-    box-shadow: 0px 5px 35px rgba(255, 255, 255, 0.25);   
+    box-shadow: 0px 5px 35px var(--shadow-color);   
 }
